Fix spacing issue on small passementeries
Is it weird that they are on white backgrounds?

--- a/productview.less
+++ b/productview.less
@@ -157,10 +157,11 @@ button.slide {
   width: 100%;
   max-width: 100%;
   height: auto;
-  min-height: 70px; /* make sure there is always room for the info-box to showup */
+  min-height: 0;
   max-height: none;
   margin: 0;
   padding: 0;
+  overflow: visible;
 }
 
 .list li:nth-child(3n) {
